--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.8",
     "next": "^14.0.4",
     "next-google-fonts": "^2.2.0",
     "nextjs-google-fonts": "^3.4.0",
