--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.8",
+    "dotenv": "^16.4.4",
+    "firebase": "^10.8.0",
     "next": "^14.0.4",
     "next-google-fonts": "^2.2.0",
     "nextjs-google-fonts": "^3.4.0",
