--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/speed-insights": "^1.0.8",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
+    "firebase-admin": "^12.5.0",
     "next": "^14.0.4",
     "next-google-fonts": "^2.2.0",
     "nextjs-google-fonts": "^3.4.0",
