--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^12.5.0",
     "next": "^14.0.4",
     "next-google-fonts": "^2.2.0",
+    "next-seo": "^6.6.0",
     "nextjs-google-fonts": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18",
